--- a/treenets.yml
+++ b/treenets.yml
@@ -1,105 +1,128 @@
-name: treenets
-channels:
-  - conda-forge
-  - bioconda
-  - defaults
-dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=1_llvm
-  - ca-certificates=2020.12.5=ha878542_0
-  - certifi=2020.12.5=py39hf3d152e_1
-  - cffi=1.14.5=py39he32792d_0
-  - cycler=0.10.0=py_2
-  - dbus=1.13.6=hfdff14a_1
-  - expat=2.2.10=h9c3ff4c_0
-  - fontconfig=2.13.1=hba837de_1004
-  - freetype=2.10.4=h0708190_1
-  - future=0.18.2=py39hf3d152e_3
-  - gettext=0.19.8.1=h0b5b191_1005
-  - glib=2.66.7=h9c3ff4c_1
-  - glib-tools=2.66.7=h9c3ff4c_1
-  - gst-plugins-base=1.18.4=h29181c9_0
-  - gstreamer=1.18.4=h76c114f_0
-  - icu=68.1=h58526e2_0
-  - joblib=1.0.1=pyhd8ed1ab_0
-  - jpeg=9d=h36c2ea0_0
-  - kiwisolver=1.3.1=py39h1a9c180_1
-  - krb5=1.17.2=h926e7f8_0
-  - lcms2=2.12=hddcbb42_0
-  - ld_impl_linux-64=2.35.1=hea4e1c9_2
-  - libblas=3.9.0=8_mkl
-  - libcblas=3.9.0=8_mkl
-  - libclang=11.1.0=default_ha53f305_0
-  - libedit=3.1.20191231=he28a2e2_2
-  - libevent=2.1.10=hcdb4288_3
-  - libffi=3.3=h58526e2_2
-  - libgcc-ng=9.3.0=h2828fa1_18
-  - libgfortran-ng=9.3.0=hff62375_18
-  - libgfortran5=9.3.0=hff62375_18
-  - libglib=2.66.7=h3e27bee_1
-  - libgomp=9.3.0=h2828fa1_18
-  - libiconv=1.16=h516909a_0
-  - liblapack=3.9.0=8_mkl
-  - libllvm11=11.1.0=hf817b99_0
-  - libopenblas=0.3.12=pthreads_h4812303_1
-  - libpng=1.6.37=h21135ba_2
-  - libpq=13.1=hfd2b0eb_2
-  - libstdcxx-ng=9.3.0=h6de172a_18
-  - libtiff=4.2.0=hdc55705_0
-  - libuuid=2.32.1=h7f98852_1000
-  - libwebp-base=1.2.0=h7f98852_2
-  - libxcb=1.13=h7f98852_1003
-  - libxkbcommon=1.0.3=he3ba5ed_0
-  - libxml2=2.9.10=h72842e0_3
-  - llvm-openmp=11.1.0=h4bd325d_0
-  - lz4-c=1.9.3=h9c3ff4c_0
-  - matplotlib=3.3.4=py39hf3d152e_0
-  - matplotlib-base=3.3.4=py39h2fa2bec_0
-  - mkl=2020.4=h726a3e6_304
-  - mysql-common=8.0.23=ha770c72_1
-  - mysql-libs=8.0.23=h935591d_1
-  - ncurses=6.2=h58526e2_4
-  - ninja=1.10.2=h4bd325d_0
-  - nspr=4.30=h9c3ff4c_0
-  - nss=3.63=hb5efdd6_0
-  - numpy=1.20.1=py39hdbf815f_0
-  - olefile=0.46=pyh9f0ad1d_1
-  - openssl=1.1.1j=h7f98852_0
-  - pandas=1.2.3=py39hde0f152_0
-  - pcre=8.44=he1b5a44_0
-  - pillow=8.1.2=py39hf95b381_0
-  - pip=21.0.1=pyhd8ed1ab_0
-  - pthread-stubs=0.4=h36c2ea0_1001
-  - pycparser=2.20=pyh9f0ad1d_2
-  - pyparsing=2.4.7=pyh9f0ad1d_0
-  - pyqt=5.12.3=py39hf3d152e_7
-  - pyqt-impl=5.12.3=py39h0fcd23e_7
-  - pyqt5-sip=4.19.18=py39he80948d_7
-  - pyqtchart=5.12=py39h0fcd23e_7
-  - pyqtwebengine=5.12.1=py39h0fcd23e_7
-  - python=3.9.2=hffdb5ce_0_cpython
-  - python-dateutil=2.8.1=py_0
-  - python_abi=3.9=1_cp39
-  - pytorch=1.7.1=cpu_py39h714fb45_2
-  - pytz=2021.1=pyhd8ed1ab_0
-  - qt=5.12.9=hda022c4_4
-  - readline=8.0=he28a2e2_2
-  - scikit-learn=0.24.1=py39h4dfa638_0
-  - scipy=1.6.1=py39hee8e79c_0
-  - setuptools=49.6.0=py39hf3d152e_3
-  - six=1.15.0=pyh9f0ad1d_0
-  - sqlite=3.34.0=h74cdb3f_0
-  - threadpoolctl=2.1.0=pyh5ca1d4c_0
-  - tk=8.6.10=h21135ba_1
-  - tornado=6.1=py39h3811e60_1
-  - tqdm=4.59.0=pyhd8ed1ab_0
-  - typing_extensions=3.7.4.3=py_0
-  - tzdata=2021a=he74cb21_0
-  - wheel=0.36.2=pyhd3deb0d_0
-  - xorg-libxau=1.0.9=h7f98852_0
-  - xorg-libxdmcp=1.1.3=h7f98852_0
-  - xz=5.2.5=h516909a_1
-  - zlib=1.2.11=h516909a_1010
-  - zstd=1.4.9=ha95c52a_0
-prefix: /nas/longleaf/home/lswhiteh/.conda/envs/treenets
-
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: linux-64
+@EXPLICIT
+https://conda.anaconda.org/conda-forge/linux-64/_libgcc_mutex-0.1-conda_forge.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/ca-certificates-2020.12.5-ha878542_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libstdcxx-ng-9.3.0-h6de172a_18.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/mysql-common-8.0.23-ha770c72_1.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/tzdata-2021a-he74cb21_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/ld_impl_linux-64-2.35.1-hea4e1c9_2.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libgomp-9.3.0-h2828fa1_18.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/llvm-openmp-11.1.0-h4bd325d_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/_openmp_mutex-4.5-1_llvm.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libgcc-ng-9.3.0-h2828fa1_18.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/mkl-2020.4-h726a3e6_304.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/c-ares-1.17.1-h7f98852_1.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/expat-2.2.10-h9c3ff4c_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/icu-68.1-h58526e2_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/jpeg-9d-h36c2ea0_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libev-4.33-h516909a_1.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libffi-3.3-h58526e2_2.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libiconv-1.16-h516909a_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libuuid-2.32.1-h7f98852_1000.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libwebp-base-1.2.0-h7f98852_2.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/lz4-c-1.9.3-h9c3ff4c_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/ncurses-6.2-h58526e2_4.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/ninja-1.10.2-h4bd325d_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/nspr-4.30-h9c3ff4c_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/openssl-1.1.1k-h7f98852_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/pcre-8.44-he1b5a44_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/pthread-stubs-0.4-h36c2ea0_1001.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/xorg-libxau-1.0.9-h7f98852_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/xorg-libxdmcp-1.1.3-h7f98852_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/xz-5.2.5-h516909a_1.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/zlib-1.2.11-h516909a_1010.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/gettext-0.19.8.1-h0b5b191_1005.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libedit-3.1.20191231-he28a2e2_2.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libevent-2.1.10-hcdb4288_3.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libllvm11-11.1.0-hf817b99_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libnghttp2-1.43.0-h812cca2_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libpng-1.6.37-h21135ba_2.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libssh2-1.9.0-ha56f1ee_6.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libxcb-1.13-h7f98852_1003.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libxml2-2.9.10-h72842e0_3.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/readline-8.0-he28a2e2_2.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/tk-8.6.10-h21135ba_1.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/zstd-1.4.9-ha95c52a_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/freetype-2.10.4-h0708190_1.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/krb5-1.17.2-h926e7f8_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libclang-11.1.0-default_ha53f305_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libtiff-4.2.0-hdc55705_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libxkbcommon-1.0.3-he3ba5ed_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/mysql-libs-8.0.23-h935591d_1.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/sqlite-3.34.0-h74cdb3f_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/fontconfig-2.13.1-hba837de_1004.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/lcms2-2.12-hddcbb42_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libcurl-7.75.0-hc4aaa36_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libpq-13.1-hfd2b0eb_2.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/nss-3.63-hb5efdd6_0.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/appdirs-1.4.4-pyh9f0ad1d_0.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/attrs-20.3.0-pyhd3deb0d_0.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/cached-property-1.5.2-hd8ed1ab_1.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/cached_property-1.5.2-pyha770c72_1.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/click-7.1.2-pyh9f0ad1d_0.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/dataclasses-0.8-pyhc8e2a94_1.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/glib-tools-2.66.7-h9c3ff4c_1.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/gstreamer-1.18.4-h76c114f_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/gst-plugins-base-1.18.4-h29181c9_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libgfortran-ng-9.3.0-hff62375_18.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libgfortran5-9.3.0-hff62375_18.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/hdf5-1.10.6-nompi_h6a2412b_1114.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libopenblas-0.3.12-pthreads_h4812303_1.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libglib-2.66.7-h3e27bee_1.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/dbus-1.13.6-hfdff14a_1.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/qt-5.12.9-hda022c4_4.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/glib-2.66.7-h9c3ff4c_1.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/olefile-0.46-pyh9f0ad1d_1.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/pathspec-0.8.1-pyhd3deb0d_0.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/pycparser-2.20-pyh9f0ad1d_2.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/pyparsing-2.4.7-pyh9f0ad1d_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/python-3.9.2-hffdb5ce_0_cpython.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/python_abi-3.9-1_cp39.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/pytz-2021.1-pyhd8ed1ab_0.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/six-1.15.0-pyh9f0ad1d_0.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/svgwrite-1.4.1-pyhd8ed1ab_0.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/threadpoolctl-2.1.0-pyh5ca1d4c_0.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/toml-0.10.2-pyhd8ed1ab_0.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/tqdm-4.59.0-pyhd8ed1ab_0.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/typing_extensions-3.7.4.3-py_0.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/wheel-0.36.2-pyhd3deb0d_0.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/zipp-3.4.1-pyhd8ed1ab_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/certifi-2020.12.5-py39hf3d152e_1.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/cffi-1.14.5-py39he32792d_0.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/cycler-0.10.0-py_2.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/future-0.18.2-py39hf3d152e_3.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/importlib-metadata-3.7.3-py39hf3d152e_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/kiwisolver-1.3.1-py39h1a9c180_1.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/mypy_extensions-0.4.3-py39hf3d152e_3.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/pillow-8.1.2-py39hf95b381_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/pyqt5-sip-4.19.18-py39he80948d_7.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/pyrsistent-0.17.3-py39h3811e60_2.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/python-dateutil-2.8.1-py_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/regex-2021.3.17-py39h3811e60_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/tornado-6.1-py39h3811e60_1.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/typed-ast-1.4.2-py39h3811e60_0.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/black-20.8b1-py_1.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/pyqt-impl-5.12.3-py39h0fcd23e_7.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/setuptools-49.6.0-py39hf3d152e_3.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/joblib-1.0.1-pyhd8ed1ab_0.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/jsonschema-3.2.0-pyhd8ed1ab_3.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/pip-21.0.1-pyhd8ed1ab_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/pyqtchart-5.12-py39h0fcd23e_7.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/pyqtwebengine-5.12.1-py39h0fcd23e_7.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/pyqt-5.12.3-py39hf3d152e_7.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/h5py-3.1.0-nompi_py39h25020de_100.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/matplotlib-3.3.4-py39hf3d152e_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/matplotlib-base-3.3.4-py39h2fa2bec_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/pandas-1.2.3-py39hde0f152_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/tskit-0.3.5-py39hce5d2b2_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/gsl-2.6-he838d99_2.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/msprime-0.7.4-py39h1122814_3.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libblas-3.9.0-8_mkl.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libcblas-3.9.0-8_mkl.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/liblapack-3.9.0-8_mkl.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/numpy-1.20.1-py39hdbf815f_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/pytorch-1.7.1-cpu_py39h714fb45_2.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/scipy-1.6.1-py39hee8e79c_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/scikit-learn-0.24.1-py39h4dfa638_0.tar.bz2
